--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio de Evidencias</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="./icono.png" type="image/png">
 </head>
 
 <body>
